FIX: bg, ADD: icons + custom scrollbar

--- a/src/pages/App.sass
+++ b/src/pages/App.sass
@@ -28,7 +28,7 @@ nav
     font-family: $spaceg
     padding: 1em
     background-color: $dark-blue
-    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.2), 0 0 10px 0 rgba(0, 0, 0, 0.19)
+    // box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.2), 0 0 10px 0 rgba(0, 0, 0, 0.19)
 
     .nav-item, a, .nav-link
         color: $white
@@ -44,7 +44,7 @@ img
 
 main
     font-family: $spaceg
-    margin: 0 20%
+    margin: 0 25% 0 0
     padding: 4%
     // height: 72vh
     // width: auto
