--- a/src/pages/index.sass
+++ b/src/pages/index.sass
@@ -6,6 +6,14 @@ $yellow: #fed766
     
 body
     margin: 0
-    background: url('../images/mainbg_repeat.png')
+    background: url('../images/mainbg_repeat2.png')
     background-size: 100vw auto
     color: $dark-blue
+
+body::-webkit-scrollbar
+    width: 1em
+body::-webkit-scrollbar-track
+    // box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3)
+    background-color: $dark-blue
+body::-webkit-scrollbar-thumb
+    background-color: $white
